Updated SecurityConfig, UserService, and AccountService